.config/waybar/style.css
@import "/home/Asmit/.cache/wal/colors-waybar.css";

@define-color main-color @color14;
@define-color text-color @color15;

* {
    font: bold 13px "JetBrainsMono Nerd Font Propo";
    border: none;
    border-radius: 0px;
    box-shadow: none;
    text-shadow: none;
}

window#waybar {
    background: alpha(@background, 0.85);
    border-bottom: 0px solid alpha(@main-color, 0.5);
}

#window {
    padding: 2px 10px;
    margin: 0px 0px 4px 4px;
    background-color: transparent;
    border-radius: 10px;
    color: lighter(@main-color);
}

tooltip {
    padding: 10px 10px;
    background: alpha(@background, 0.8);
    border: 2px solid alpha(lighter(@main-color), 0.3);
    border-radius: 10px;
}

tooltip label {
    color: @foreground;
}

#custom-arrow-right {
    color: alpha(lighter(@main-color), 0.8);
    margin: 0px 4px;
    margin: 0px 2px 4px 4px;

}

#cpu,
#memory,
#disk,
#custom-weather {
    padding: 3px 10px;
    margin: 7px 4px;
    background: alpha(darker(@main-color), 0.3);
    color: @text-color;
    border-radius: 12px;
}

#custom-record,
#custom-stop,
#custom-section,
#custom-theme {
    padding: 1px 10px;
    margin: 8px 4px;
    background: alpha(darker(@main-color), 0.3);
    color: @text-color;
    border-radius: 12px;
}

#pulseaudio,
#network,
#bluetooth,
#backlight {
    padding: 0px 5px 0px 5px;
    color: lighter(@main-color);
}

#workspaces {
    margin: 5px 2px;
    padding: 0px 0px;
    background: alpha(darker(@foreground), 0.1);
    border-radius: 12px;
}


#workspaces button {
    padding: 0px 4px;
    margin: 0px 4px;
    color: alpha(@foreground, 0.7);

}

#workspaces button.active {
    transition: color 0.5s;
    color: @main-color;
    background: alpha(darker(@main-color), 0.2);
    border-radius: 12px;
    margin: 0px 0px;
}

#workspaces button.urgent,
#workspaces button:hover {
    color: @color5;
    background: alpha(darker(@main-color), 0.3);
    border-radius: 12px;
}

#tray {
    padding: 0px 2px 0px 2px;
    color: lighter(@main-color);
}

#custom-arrow-left {
    color: alpha(lighter(@main-color), 0.8);
    margin: 4px 4px 4px 4px;
}



#custom-notifications,
#custom-updates,
#custom-theme-switcher {
    padding: 0px 10px;
    margin: 6px 6px;
    color: @main-color;
    background: alpha(darker(@main-color), 0.3);
    color: @text-color;
    border-radius: 12px;
}

#clock {
    padding: 4px 6px 0px 0px;
    margin: 0px 2px 4px 4px;
    border-radius: 10px;
    color: lighter(@main-color);
    font: bold 14px "JetBrainsMono Nerd Font Propo";
}

#power {
    background: alpha(@main-color, 0);
    color: @main-color;
    border-radius: 10px;
    margin: 4px 0px 0px 0px;

}

#power-profiles-daemon {
    padding: 0px 8px;
    margin: 4px 0px 8px 4px;
    color: @main-color;
    background: alpha(darker(@main-color), 0.3);
    border-radius: 10px;
}

#battery {
    padding: 0px 8px;
    margin: 0px 2px 4px 2px;
    color: lighter(@main-color);
}


#custom-playerlabel {
    padding: 0px 8px;
    margin: 8px 4px;
    color: @background;
    background: alpha(lighter(@color13), 0.7);
    border-radius: 10px;
}


#taskbar {
    padding: 0px 4px;
    margin: 0px 0px;
    background: alpha(darker(@main-color), 0);
    border-radius: 0px;
    color: lighter(@main-color);
}

#taskbar button:hover {
    color: @main-color;
    background: alpha(darker(@main-color), 0.1);
    border-radius: 10px;
}

#taskbar button.active {
    color: @main-color;
    background: alpha(darker(@main-color), 0.3);
    border-radius: 10px;
}

/*
.modules-left {
  background: alpha(@background, 1);
  padding: 0px 8px 0px 0px;
  border-radius: 0px;
  border: 2px solid alpha(@main-color, 0.5);
}

.modules-right {
  background: alpha(@background, 1);
  border: 2px solid alpha(@main-color, 0.5);
  border-radius: 0px;

}
  */

